--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-os
-matplotlib.pyplot
-pandas
-yfinance
-datetime
-numpy
+streamlit==1.5.0
+pandas==1.3.4
+numpy==1.21.4
+matplotlib==3.4.3
+yfinance==0.1.64
