--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-streamlit==1.5.0
 pandas==1.3.4
-numpy==1.21.4
-matplotlib==3.4.3
+numpy==1.21.2
+datetime==4.3
+requests==2.26.0
 yfinance==0.1.64
+streamlit==1.2.0
+plotly==5.5.0
